--- a/ridestarter.html
+++ b/ridestarter.html
@@ -51,20 +51,17 @@
 <section class="solution">
   <div class="solution_container">
     <h1> SOLUTION</h1>
-    <p> The inspiration for creating Ridestarter originated from my experience in
+    <p>
+      The inspiration for creating Ridestarter originated from my experience in
       participating on two charity 500-mile bike rides. Through this experience, my
       group and I had to push an effort to raise funds for the supported organization
       - sponsoring our main directory to either gofundme or the organization’s donation site.
       What if our efforts were also channeled to a crowdfunding site, with the goal
       to bring together cyclist enthusiasts and interested donors.  </p>
 
-    <p> The goal was to create a product that would aim to entice bike
+    <p> The goal of this project is to create an application that entice bike
       challenges for the community to partake in while raising awareness
-      for causes that users care about. The application is also created for cycle
-      enthusiasts who wanted to create a fundraiser and tell an adventurous story
-      through their journey for making a difference in the community.
-
-      Donators can browse through different projects and make a donation of their choice.
+      for causes that users care about. Donators can browse through different projects and make a donation of their choice.
       Fundraisers can create project rides with exclusive features such as uploading map routes or designating
       the total distance for filtering purposes.
     </p>
@@ -75,43 +72,46 @@
   <div class="research_container">
     <h1> RESEARCHING THE CHALLENGES </h1>
 
-    <div class="survey_findings"> Survey Findings <hr>
+    <div class="survey_findings"> <b>Survey Findings</b> <hr>
       <p> At this initial stage, it was important to gain a better understanding of users' behavior of
-        donating to a charity or spearheading a fundraiser. Listening and  </p>
-      <div class="survey_findings_2">
+        donating to a charity or spearheading a fundraiser. The survey was aimed towards a group of people
+      who have made donations, created fundraiser projects, participated in charity bike ride and also users
+      who have neither fundraised or donated.  </a> </p>
 
-      <p>1. Most respondents were motivated to donate because they want to feel
+      <b><p>1. Most respondents were motivated to donate because they want to feel
       that they’re making an impact in the world. </p>
       <p>2. Some respondents felt the process of creating an account and going
       through the donation flow are a hassle that takes a toll of their time. </p>
       <p>3. People usually don’t donate because they are sketpical of donation sites -
       where the money is going to and how much of an impact they are making. Another
-      popular response is that they feel that their donation is too small to make a difference. </p>
+      popular response is that they feel that their donation is too small to make a difference. </p> </b>
 
-      <p><b>In addition to the survey, I also conducted user interviews on
-      people who have been on charity bike rides and have experienced through the fundraising process. These are my findings: </b></p>
+      <p>In addition to the survey, I also conducted user interviews on
+      people who have been on charity bike rides and have experienced through the fundraising process. These are my findings: </p>
 
-      <p>1. Fundraisers generally have to reach out to the organization that they’re
+      <b><p>1. Fundraisers generally have to reach out to the organization that they’re
         supporting to host the fundraising site. This makes it hard to gain traction from
-        the cyclist community to donate. </p>
+        the cyclist community to contribute fundings. </p>
       <p>2. One interesting observation was that people are more likely to donate or feel more
-        comfortable fundraising if the project entice challenges. </p>
-      </div>
+        comfortable fundraising if the project entice challenges. </p> </b>
       <a href="https://docs.google.com/spreadsheets/d/1I71riCTMi-fcfzlis8xqgAgljlUzt9PmAgFs3RwU1fQ/edit?usp=sharing" target="_blank">
           Click here to view the survey responses </a>
       <img src="images/ridestarter/survey.png">
     </div>
 
-    <div class="competitive_analysis"> Competitive Analysis <hr>
-      <p> Based from the analysis, it was apparent that almost all crowdfunding sites strive for similiar
+    <div class="competitive_analysis"> <b> Competitive Analysis </b> <hr>
+      <p> I analyzed four different crowdfunding companies in order to find out more about how
+        they operate, their strengths/weaknesses, features, and differentiators. Based from the analysis, it was apparent that almost all crowdfunding sites strive for similiar
         features - progress meter and donation goals. Because Ridestarter is a charity bike crowdfunding source,
-        it's important that the application contains features unique to charity bike rides. </p>
+        it's important that the application contains features unique to charity bike rides as well as some of the
+          important crowdfunding elements. </p>
+
       <a href="https://docs.google.com/spreadsheets/d/1f1FW3b75Uf-R_5KEUwpLFI_N9QV515_YGSm9SxUTedM/edit?usp=sharing" target="_blank">
       You can take a closer look of the competitive analysis here. </a>
       <img src="images/ridestarter/competitive_analysis.png" >
     </div>
 
-    <div class="personas"> Personas <hr>
+    <div class="personas"> <b>Personas </b><hr>
       <p>After conducting four user interviews and compiling the survey, I created three
         user personas to reflect both the fundraiser and donor perspective. My goal was to develop
       empathy for the users and how they will interact with the application. </p>
@@ -127,17 +127,17 @@
     <div class="design_container">
       <h1> RIDING THROUGH THE DESIGN CHOICES </h1>
 
-      <div class="user_flow"> User Flow <hr>
+      <div class="user_flow"> <b>User Flow</b> <hr>
         <p>Based on the user research, I finalized four user stories that I believe
           are important for users to navigate through their goals in Ridestarter:
-          Creating an Account, Browsing a Charity, Donating to a Charity, and Creating a Campaign. </p>
+          <b>Creating an Account, Browsing a Charity, Donating to a Charity, and Creating a Campaign.</b> </p>
         <a href="https://drive.google.com/file/d/0B0bktw2AN4LKaTg4d2pSb19PdWM/view?usp=sharing">
           Click here to view the online user flow </a>
 
         <img src="images/ridestarter/user_flow.png">
       </div>
 
-      <div class="branding"> Branding/Typography <hr>
+      <div class="branding"> <b>Branding and Typography</b> <hr>
         <p> With Ridestarter being a crowdfunding application,<b> evoking trust</b> is one of the
           most important facets in getting users to use the site. Green is used as the primary color for
           Ridestarter because not only green associates with money flow, but also promotes
@@ -148,13 +148,11 @@
         <img src="images/ridestarter/ridestarter_branding.png">
       </div>
 
-      <div class="low_mockups"> Low-Fidelity Wireframes <hr>
-        <p>Based on user research, I proceeded to sketch the low-fidelity
-          wireframes in Balsamiq. I designed the wireframes based on each user story that
-          focuses on a particular problem. </p>
+      <div class="low_mockups"> <b>Low-Fidelity Wireframes</b> <hr>
+        <p>In order to show potential users how the application is supposed to function and be built,
+           I designed the low-fidelity wireframes in Balsamiq based from the user stories. </p>
 
         <img src="images/ridestarter/ridestarter_low.png">
-
       </div>
 
     </div>
@@ -163,7 +161,7 @@
 <section class="implementation">
   <div class="implement_container">
     <h1> GEARING THE DESIGN IMPLEMENTATION </h1>
-    <div class="user_testing"> User Testing <hr>
+    <div class="user_testing"> <b>User Testing</b> <hr>
       <p> I conducted a <b>contextual interview </b> on four different users to get feedback on the prototypes. These are some of the most important questions that I asked
         during the testing as they went through the website: </p>
       <p>1. Look at the homepage. What do you think this website is about? </p>
@@ -192,16 +190,14 @@
        are captivating and trustworthy.”</p>
   </div>
 
-  <div class="special_features"> Special Features <hr>
+  <div class="special_features"> <b>Special Features </b> <hr>
     <div class="charity_page_container">
       <img src="images/ridestarter/charity_page.png">
       <div class="charity_page_text">
-        Designing an Intuitive Charity Page<hr>
-        <p>Two of the most important functions in the info box are the “Interested
-        in riding?” and the link to the donated organization - both highlighted in green. </p>
+        <b>Designing an Intuitive Charity Page</b>
         <p>The “interested in riding” contact reinforces the goal of the application to bridge
         the gap between donating and inspiring potential riders to participate in the challenge.
-        during user testing, one of the users pointed out that it would be useful to link the organization's official site where the funds
+        During user testing, one of the users pointed out that it would be useful to link the organization's official site where the funds
         are going to. This allows user to conveniently understand where exactly the donated funds are contributing.  </p>
         <p>Based on the user research, majority of participants think that the progress bar
         and fundraiser goal are the most important crowdfunding features. To accomodate this finding,
@@ -215,17 +211,17 @@
 
     <div class="guest_checkout_container">
       <img src="images/ridestarter/guest_checkout.png">
-      <div class="guest_checkout_text"> Improving the Donation Process <hr>
+      <div class="guest_checkout_text"> <b>Improving the Donation Process </b>
         <p>According to my research, some respondents felt that the long checkout
          process hinders their motivation to donate. In pursuance of getting users
-         to quickly reach the end-stage of the donation process, Ridestarter
-         allows users to donate as a guest, with no commitments to making an account. </p>
+         to quickly reach the end-stage of the donation process,<b> Ridestarter
+         allows users to donate as a guest, </b> with no commitments to making an account. </p>
       </div>
     </div>
 
     <div class="filter_container">
       <img src="images/ridestarter/filter.png">
-      <div class="filter_text"> Discovering the Filter System<hr>
+      <div class="filter_text"> <b>Discovering the Filter System</b>
         <p>Having a filter system is important to search for different types of
           charities. Users are able to filter through category, location, and the
           total mileage of the challenge. Additionally, they can sort through the
@@ -241,7 +237,7 @@
 <section class="final">
   <div class="final_container">
     <h1>REACHING OUR FINAL DESTINATION</h1>
-    High Fidelity Mockups <hr>
+    <b>High Fidelity Mockups </b> <hr>
     <p>The solution from the preliminary user research and usability testing all
       resulted in a responsive and streamlined crowdfunding charity ride web application.
       I designed 24 high-fidelity wireframes in Sketch; below are some of the highlighted pages:</p>
