--- a/simplebox.html
+++ b/simplebox.html
@@ -43,7 +43,7 @@
   <h2 id="research"> UX RESEARCH </h2>
   <h2 id="design"> BRANDING </h2>
   <h2 id="usability"> USABILITY TESTING </h2>
-  <h2 id="high_fidelity"> HIGH FIDELITY </h2>
+  <h2 id="high_fidelity"> HIGH FIDELITY PROTOTYPES </h2>
   <h2 id="results"> RESULTS </h2>
 </nav>
 
@@ -108,7 +108,7 @@
       space of organization for the end-users. </p>
   </div>
 
-  <div class="user_flow"> User Flow <hr>
+  <div class="user_flow"> <b>User Flow </b> <hr>
     <p>From the research, I made a list of user stories to help me create user flows.
       In the diagram, I focus on the different user experience for both new and returning
       users, with several similarities. This process helped me craft a minimum viable
@@ -127,7 +127,7 @@
   <p> The next step in building the application is deciding on the brand and typography.
     The main goal of this web app is to provide a collection of notes, images, and links
     where users can store and share. Therefore, I wanted the brand and typography to
-    reflect on the scheme of both professional and personal and casual usage. </p>
+    reflect on the scheme of both professional and casual usage. </p>
   <img src="images/simplebox/simplebox_style_guide.png">
 </section>
 
@@ -198,7 +198,7 @@
 
   <div class="html">
     <h1> Front-End Development </h1> <hr>
-    <p> HTML, CSS, and Javascript were used in conjunction to develop the homepage of Simplebox.
+    <p> <b>HTML, CSS, and Javascript</b> were used in conjunction to develop the homepage of Simplebox.
       Because Simplebox is targeted for users to access through different devices, I designed the
       homepage as mobile-first to ensure its responsiveness across different outlets. </p>
     <a href=https://ekkalux.github.io/simpleBox/ target="_blank"> You can view the homepage development here </a>
