added portfolio site

--- a/simplebox.html
+++ b/simplebox.html
@@ -10,6 +10,17 @@
   <script src="//cdn.jsdelivr.net/npm/jquery.scrollto@2.1.2/jquery.scrollTo.min.js"></script>
   <script src="js/simplebox.js"></script>
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-108806471-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-108806471-1');
+</script>
+
+
 </head>
 
 <body>
@@ -197,7 +208,7 @@
   </div>
 
   <div class="html">
-    <h1> Front-End Development </h1> <hr>
+    <h1> <b>Front-End Development</b> </h1> <hr>
     <p> <b>HTML, CSS, and Javascript</b> were used in conjunction to develop the homepage of Simplebox.
       Because Simplebox is targeted for users to access through different devices, I designed the
       homepage as mobile-first to ensure its responsiveness across different outlets. </p>
