added more projects

--- a/index.html
+++ b/index.html
@@ -81,10 +81,17 @@
     </div>
 
     <div class="more_projects">
-      <a href="https://www.behance.net/ekkaluxnguyen" target="_blank"><button class="button_more_projects">More Projects on Behance</button></a>
+      <img src="images/more_projects/more_projects.png">
+      <div class="more_projects_text">
+        <h1> More Projects </h1>
+        <h2> UI Design | Brand Identity | Icons </h2>
+        <p> Other projects that includes user interface design and branding work. </p>
+        <div class="more_projects_button">
+          <a href="more_projects.html" target="_blank"><button class="button_more">View Projects</button></a>
+        </div>
+      </div>
     </div>
 
-  </div>
 </section>
 
 <section class="about">
