--- a/simplebox.html
+++ b/simplebox.html
@@ -36,6 +36,7 @@
     <div class="hero_content">
       <h1> SIMPLEBOX </h1>
       <p>A web application that allows users to collect information and store it in a centralized location.<p/>
+      <a href="https://invis.io/8PC2WA7AH" target="_blank"><button class="button_simplebox">Prototype</button></a>
       <div class="arrow_down_container">
         <i class="fa fa-arrow-circle-o-down fa-lg"></i>
       </div>
@@ -78,9 +79,10 @@
 <section class="solution">
   <div class="solution_container">
     <h1> SOLUTION </h1>
-    <p> Due to the increase amount of mobile collaboration tools, technological jargon and cluttered services deter
-      users from using the specific product. Simplebox simplifies this and creates a tool that is easily accessible for all users to conveniently save and
-      share content across multiple devices. Users start off with a free account and can then toggle between different priced account.
+    <p> Due to the increase amount of mobile collaboration tools, technological jargon and cluttered features deter
+      users from using the specific product. In addition, people have a difficult time remembering
+      where they saved notes, images, and links when using some of these tools. Simplebox simplifies this and creates a tool that is easily accessible for all users to conveniently save and
+      share content across multiple devices. 
   </div>
 </section>
 
