--- a/ridestarter.html
+++ b/ridestarter.html
@@ -161,7 +161,9 @@
 
       <div class="low_mockups"> <b>Low-Fidelity Wireframes</b> <hr>
         <p>In order to show potential users how the application is supposed to function and be built,
-           I designed the low-fidelity wireframes in Balsamiq based from the user stories. </p>
+           I designed the low-fidelity wireframes in Balsamiq based from the user stories. It was also important
+         to remember designing from both the donators and fundraisers' experience. Given that mind, I created
+         wireframes from the fundraiser's perspective where they are able to manage and edit their projects. </p>
 
         <img src="images/ridestarter/ridestarter_low.png">
       </div>
@@ -173,7 +175,8 @@
   <div class="implement_container">
     <h1> GEARING THE DESIGN IMPLEMENTATION </h1>
     <div class="user_testing"> <b>User Testing</b> <hr>
-      <p> I conducted a <b>contextual interview </b> on four different users to get feedback on the prototypes. These are some of the most important questions that I asked
+      <p> I conducted a <b>contextual interview </b> on four different users to get feedback on the clickable
+        prototypes in InVision. These are some of the most important guiding questions that I asked
         during the testing as they went through the website: </p>
       <p>1. Look at the homepage. What do you think this website is about? </p>
       <p>2. Find a challenge and make a donation. </p>
