--- a/more_projects.html
+++ b/more_projects.html
@@ -8,7 +8,6 @@
   <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="//cdn.jsdelivr.net/npm/jquery.scrollto@2.1.2/jquery.scrollTo.min.js"></script>
-  <script src="js/simplebox.js"></script>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108806471-1"></script>
@@ -49,3 +48,7 @@
 </section>
 
 <!-- MORE PROJECTS MORE PROJECTS -->
+
+</body>
+
+</html>
