added more projects 3

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
 <section class="about">
   <div class="about_container">
-    <h1> ABOUT </h1> <hr>
+    <h1> ABOUT </h1> <hr id="hr_about"> </hr>
     <p>Hello! I’m Ekkalux or Lux for short. I'm a UX/UI Designer based in San Francisco
        passionate about creating simple yet user-centric design experience. I have
        an affinity for creating products that bridge the gap between technology, education, and health.
