--- a/more_projects.html
+++ b/more_projects.html
@@ -42,8 +42,7 @@
 
 <section class="more_projects">
   <div class="more_projects_container">
-    <img src="images/more_projects/peertalk.png">
-    <img src="images/more_projects/peertalk.png">
+    <img id="peertalk" src="images/more_projects/peertalk.png">
   </div>
 </section>
 
