added more projects 3

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <h2> UX Research | UX Design | Brand Identity </h2>
         <p> A web application that allows users to collect information and store it in a centralized location.</p>
         <div class="simplebox_button">
-          <a href="simplebox.html" target="_blank"><button class="button_simplebox">Case Study</button></a>
+          <a href="simplebox.html"><button class="button_simplebox">Case Study</button></a>
           <a href="https://invis.io/8PC2WA7AH" target="_blank"><button class="button_simplebox">Prototype</button></a>
         </div>
       </div>
@@ -87,7 +87,7 @@
         <h2> UI Design | Brand Identity | Icons </h2>
         <p> Other projects that includes user interface design and branding work. </p>
         <div class="more_projects_button">
-          <a href="more_projects.html" target="_blank"><button class="button_more">View Projects</button></a>
+          <a href="more_projects.html"><button class="button_more">View Projects</button></a>
         </div>
       </div>
     </div>
@@ -104,7 +104,7 @@
        usability testing, and a tad of front-end development. I also have experience with
        designing graphic assets such as banners, flyers, newsletters, and digital prints.
        When I'm not designing or coding, I enjoy staying
-       fit, biking, and traveling. </p>
+       fit and traveling. </p>
   </div>
 </section>
 
