--- a/more_projects.html
+++ b/more_projects.html
@@ -42,7 +42,10 @@
 
 <section class="more_projects">
   <div class="more_projects_container">
-    <img id="peertalk" src="images/more_projects/peertalk.png">
+    <img class="projects" src="images/more_projects/wetalk.png">
+    <img class="projects" src="images/more_projects/jamify.png">
+    <a href="https://issuu.com/berkeleysigep/docs/sigep_spring_2015_newsletter_" target="_blank"><img class="projects" src="images/more_projects/sigepnewsletter.png"> </a>
+    <img class="projects" src="images/more_projects/gateway.png">
   </div>
 </section>
 
