--- a/ridestarter.html
+++ b/ridestarter.html
@@ -268,7 +268,7 @@
       testing early during the low-fidelity wireframing phase. Psychologically, I feel
       less wedded to low-fidelity prototypes and am more likely to make the changes on
       the user experiences. On the contrary, it’s harder for me to give up or add a design
-      element once I have already invest in time in a design. </p>
+      element once I have already invest in a design. </p>
 
     <p>Testers were overall impressed with the design structure and content. Listening closely to users during
       the interview process helped me emphathize with their motives and thought process. Additionally,
