--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
       <img src="images/more_projects/more_projects.png">
       <div class="more_projects_text">
         <h1> More Projects </h1>
-        <h2> UI Design | Brand Identity | Icons </h2>
-        <p> Other projects that includes user interface design and branding work. </p>
+        <h2> UI Design | Brand Identity | Graphic Design </h2>
+        <p> Other projects that includes user interface design, branding, and newsletter work. </p>
         <div class="more_projects_button">
           <a href="more_projects.html"><button class="button_more">View Projects</button></a>
         </div>
@@ -111,7 +111,7 @@
 <section class="contact">
   <h1> CONTACT </h1> <hr>
   <div class="contact_container">
-    <p> I am always looking to make the net better. Feel free to get in touch with me if you have
+    <p> I am always looking to make the web better. Feel free to get in touch with me if you have
       opportunities for projects or open positions!</p>
     <a href="https://docs.google.com/forms/d/e/1FAIpQLSegqfUFqfZbNikQQFP_JDGc8hcajth3xduNM2hp5D2OuUd3BQ/viewform" target="_blank"><button class="button_touch">Get in touch</button></a>
   </div>
