--- a/ridestarter.html
+++ b/ridestarter.html
@@ -55,27 +55,21 @@
 <section class="summary">
   <div class="summary_container">
     <h1> SUMMARY </h1>
-    <p> Ridestarter is a crowdfunding website application for organizations and individuals looking to either raise funds or donate to charity bike rides across the world. Users can choose to create a bike campaign, supporting specific causes or browse through the different bike charities that are offered.</p>
+    <p> Ridestarter is a crowdfunding website application for organizations and individuals looking to
+      either raise funds or donate to charity bike rides across the world. Users can choose to create a bike
+      campaign, supporting specific causes or browse through the different bike charities that are offered.</p>
   </div>
 </section>
 
 <section class="solution">
   <div class="solution_container">
     <h1> SOLUTION</h1>
-    <p>
-      The inspiration for creating Ridestarter originated from my experience in
-      participating on two charity 500-mile bike rides. Through this experience, my
-      group and I had to push an effort to raise funds for the supported organization
-      - sponsoring our main directory to either gofundme or the organization’s donation site.
-      What if our efforts were also channeled to a crowdfunding site, with the goal
-      to bring together cyclist enthusiasts and interested donors.  </p>
+    <p> There are a lot of existing crowd-sourced fundraising web applications such as Kickstarter,
+      GoFundme, and Indiegogo. However, many of these applications cater towards personal or general projects.
+      The goal of Ridestarter is to centralize charity bike rides across the world and allow users to crowd-source
+      for ride projects. In addition to attracting the cyclist community, Ridestarter allows donors and fundraisers to come
+      together in supporting charity rides for causes they care about.   </p>
 
-    <p> The goal of this project is to create an application that entice bike
-      challenges for the community to partake in while raising awareness
-      for causes that users care about. Donators can browse through different projects and make a donation of their choice.
-      Fundraisers can create project rides with exclusive features such as uploading map routes or designating
-      the total distance for filtering purposes.
-    </p>
   </div>
 </section>
 
@@ -102,7 +96,7 @@
 
       <b><p>1. Fundraisers generally have to reach out to the organization that they’re
         supporting to host the fundraising site. This makes it hard to gain traction from
-        the cyclist community to contribute fundings. </p>
+        the cyclist community to contribute fundings.  </p>
       <p>2. One interesting observation was that people are more likely to donate or feel more
         comfortable fundraising if the project entice challenges. </p> </b>
       <a href="https://docs.google.com/spreadsheets/d/1I71riCTMi-fcfzlis8xqgAgljlUzt9PmAgFs3RwU1fQ/edit?usp=sharing" target="_blank">
@@ -162,7 +156,7 @@
       <div class="low_mockups"> <b>Low-Fidelity Wireframes</b> <hr>
         <p>In order to show potential users how the application is supposed to function and be built,
            I designed the low-fidelity wireframes in Balsamiq based from the user stories. It was also important
-         to remember designing from both the donators and fundraisers' experience. Given that mind, I created
+         to remember to design from both the donators and fundraisers' experience. Given that mind, I created
          wireframes from the fundraiser's perspective where they are able to manage and edit their projects. </p>
 
         <img src="images/ridestarter/ridestarter_low.png">
@@ -267,11 +261,11 @@
     <p>If given more time, I would love the opportunity to spend more time doing usability
       testing early during the low-fidelity wireframing phase. Psychologically, I feel
       less wedded to low-fidelity prototypes and am more likely to make the changes on
-      the user experiences. On the contrary, it’s harder for me to give up or add a design
+      the user experiences. On the contrary, it’s omre difficult to give up or add a design
       element once I have already invest in a design. </p>
 
     <p>Testers were overall impressed with the design structure and content. Listening closely to users during
-      the interview process helped me emphathize with their motives and thought process. Additionally,
+      the interview process helped me empathize with their motives and thought process. Additionally,
       analyzing user feedback and translating them into mockups is always enjoyable.
       Based on the feedback, trustworthiness is one of the most important aspect to getting
       users to use an application. Asking questions such as “Does this page follows the
