media queries fix

--- a/ridestarter.html
+++ b/ridestarter.html
@@ -81,10 +81,11 @@
       <p> At this initial stage, it was important to gain a better understanding of users' behavior of
         donating to a charity or spearheading a fundraiser. The survey was aimed towards a group of people
       who have made donations, created fundraiser projects, participated in charity bike ride and also users
-      who have neither fundraised or donated.  </a> </p>
+      who have neither fundraised or donated. These results were important in deciding not only the features of Ridestarter, but also what
+        is necessary in order to create a successful crowdfunding application. </p>
 
-      <b><p>1. Most respondents were motivated to donate because they want to feel
-      that they’re making an impact in the world. </p>
+      <b><p>1. 50% of respondents felt that the progress bar and fundraising are the most important
+      features. </p>
       <p>2. Some respondents felt the process of creating an account and going
       through the donation flow are a hassle that takes a toll of their time. </p>
       <p>3. People usually don’t donate because they are sketpical of donation sites -
@@ -98,10 +99,13 @@
         supporting to host the fundraising site. This makes it hard to gain traction from
         the cyclist community to contribute fundings.  </p>
       <p>2. One interesting observation was that people are more likely to donate or feel more
-        comfortable fundraising if the project entice challenges. </p> </b>
+        comfortable fundraising if the project entice challenges rather than just "asking for money". </p> </b>
+
       <a href="https://docs.google.com/spreadsheets/d/1I71riCTMi-fcfzlis8xqgAgljlUzt9PmAgFs3RwU1fQ/edit?usp=sharing" target="_blank">
           Click here to view the survey responses </a>
       <img src="images/ridestarter/survey.png">
+
+
     </div>
 
     <div class="competitive_analysis"> <b> Competitive Analysis </b> <hr>
