font size reduced

--- a/ridestarter.html
+++ b/ridestarter.html
@@ -54,7 +54,7 @@
 
 <section class="summary">
   <div class="summary_container">
-    <h1> SUMMARY </h1>
+    <h1> SUMMARY </h1> <hr>
     <p> Ridestarter is a crowdfunding website application for organizations and individuals looking to
       either raise funds or donate to charity bike rides across the world. Users can choose to create a bike
       campaign, supporting specific causes or browse through the different bike charities that are offered.</p>
@@ -65,7 +65,8 @@
   <div class="solution_container">
     <h1> SOLUTION</h1>
     <p> There are a lot of existing crowd-sourced fundraising web applications such as Kickstarter,
-      GoFundme, and Indiegogo. However, many of these applications cater towards personal or general projects.
+      GoFundme, and Indiegogo. However, many of these applications cater towards personal or general projects. When pertaining to
+      charity bike rides, a well-designed solution hasn't been created.
       The goal of Ridestarter is to centralize charity bike rides across the world and allow users to crowd-source
       for ride projects. In addition to attracting the cyclist community, Ridestarter allows donors and fundraisers to come
       together in supporting charity rides for causes they care about.   </p>
@@ -75,9 +76,9 @@
 
 <section class="research">
   <div class="research_container">
-    <h1> RESEARCHING THE CHALLENGES </h1>
+    <h1> RESEARCHING THE CHALLENGES </h1> <hr>
 
-    <div class="survey_findings"> <b>Survey Findings</b> <hr>
+    <div class="survey_findings"> <b>Survey Findings</b>
       <p> At this initial stage, it was important to gain a better understanding of users' behavior of
         donating to a charity or spearheading a fundraiser. The survey was aimed towards a group of people
       who have made donations, created fundraiser projects, participated in charity bike ride and also users
@@ -108,7 +109,7 @@
 
     </div>
 
-    <div class="competitive_analysis"> <b> Competitive Analysis </b> <hr>
+    <div class="competitive_analysis"> <b> Competitive Analysis </b>
       <p> I analyzed four different crowdfunding companies in order to find out more about how
         they operate, their strengths/weaknesses, features, and differentiators. Based from the analysis, it was apparent that almost all crowdfunding sites strive for similiar
         features - progress meter and donation goals. Because Ridestarter is a charity bike crowdfunding source,
@@ -120,7 +121,7 @@
       <img src="images/ridestarter/competitive_analysis.png" >
     </div>
 
-    <div class="personas"> <b>Personas </b><hr>
+    <div class="personas"> <b>Personas </b>
       <p>After conducting four user interviews and compiling the survey, I created three
         user personas to reflect both the fundraiser and donor perspective. My goal was to develop
       empathy for the users and how they will interact with the application. </p>
@@ -134,9 +135,9 @@
 
   <section class="design_choices">
     <div class="design_container">
-      <h1> RIDING THROUGH THE DESIGN CHOICES </h1>
+      <h1> RIDING THROUGH THE DESIGN CHOICES </h1> <hr>
 
-      <div class="user_flow"> <b>User Flow</b> <hr>
+      <div class="user_flow"> <b>User Flow</b>
         <p>Based on the user research, I finalized four user stories that I believe
           are important for users to navigate through their goals in Ridestarter:
           <b>Creating an Account, Browsing a Charity, Donating to a Charity, and Creating a Campaign.</b> </p>
@@ -146,7 +147,7 @@
         <img src="images/ridestarter/user_flow.png">
       </div>
 
-      <div class="branding"> <b>Branding and Typography</b> <hr>
+      <div class="branding"> <b>Branding and Typography</b>
         <p> With Ridestarter being a crowdfunding application,<b> evoking trust</b> is one of the
           most important facets in getting users to use the site. Green is used as the primary color for
           Ridestarter because not only green associates with money flow, but also promotes
@@ -157,7 +158,7 @@
         <img src="images/ridestarter/ridestarter_branding.png">
       </div>
 
-      <div class="low_mockups"> <b>Low-Fidelity Wireframes</b> <hr>
+      <div class="low_mockups"> <b>Low-Fidelity Wireframes</b>
         <p>In order to show potential users how the application is supposed to function and be built,
            I designed the low-fidelity wireframes in Balsamiq based from the user stories. It was also important
          to remember to design from both the donators and fundraisers' experience. Given that mind, I created
@@ -171,8 +172,8 @@
 
 <section class="implementation">
   <div class="implement_container">
-    <h1> GEARING THE DESIGN IMPLEMENTATION </h1>
-    <div class="user_testing"> <b>User Testing</b> <hr>
+    <h1> GEARING THE DESIGN IMPLEMENTATION </h1> <hr>
+    <div class="user_testing"> <b>User Testing</b>
       <p> I conducted a <b>contextual interview </b> on four different users to get feedback on the clickable
         prototypes in InVision. These are some of the most important guiding questions that I asked
         during the testing as they went through the website: </p>
@@ -188,10 +189,6 @@
         right after discovering it, but the click directs him to the description page instead.
         <b>I took this input and added a donate button under each projects in both the homepage
         and the discover page. </b></p>
-      <p> 3. It took a while for user #2 to understand the main objective of the
-        homepage until she deciphered through the title, featured fundraisers, and
-        “how does riderstater work.” <b>Based on this feedback, I inserted a motto “Ride
-        as one, Raise as one,” on the hero image.</b> </p>
     </div>
   </div>
 
@@ -202,7 +199,7 @@
        are captivating and trustworthy.”</p>
   </div>
 
-  <div class="special_features"> <b>Special Features </b> <hr>
+  <div class="special_features"> <b>Special Features </b>
     <div class="charity_page_container">
       <img src="images/ridestarter/charity_page.png">
       <div class="charity_page_text">
@@ -248,8 +245,8 @@
 
 <section class="final">
   <div class="final_container">
-    <h1>REACHING OUR FINAL DESTINATION</h1>
-    <b>High Fidelity Mockups </b> <hr>
+    <h1>REACHING OUR FINAL DESTINATION</h1> <hr>
+    <b>High Fidelity Mockups </b> 
     <p>The solution from the preliminary user research and usability testing all
       resulted in a responsive and streamlined crowdfunding charity ride web application.
       I designed 24 high-fidelity wireframes in Sketch; below are some of the highlighted pages:</p>
