--- a/simplebox.html
+++ b/simplebox.html
@@ -36,7 +36,7 @@
     <div class="hero_content">
       <h1> SIMPLEBOX </h1>
       <p>A web application that allows users to collect information and store it in a centralized location.<p/>
-  
+
       <div class="arrow_down_container">
         <i class="fa fa-arrow-circle-o-down fa-lg"></i>
       </div>
@@ -150,7 +150,7 @@
   <p>After defining the brand identity for simpleBox, I created low-fidelity/medium
     fidelity wireframes with balsamiq and photoshop to <b>test on usertesting.com and
     in-person </b> to see whether the product was user friendly to the users. These are
-    the main questions I asked. </p>
+    the main questions that I asked. </p>
   <p><b>1. Look around and talk about what you think this is about? What can you do
     here? What is it for? What strikes you about it? </b></p>
   <p><b> 2. Think of something you want to do here. Try and do that thing. </p>
@@ -163,6 +163,7 @@
     Click here to view the full video </a>
 
   <img src="images/simplebox/user_testing_video.png">
+  <img src="images/simplebox/simplebox_low.png">
 
 </section>
 
